<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/button_minhasRochas"
        android:layout_width="@dimen/button_home_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_minhas_rochas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_meusInsetos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_meusInsetos"
        app:layout_constraintTop_toBottomOf="@+id/button_meusInsetos" />

    <Button
        android:id="@+id/button_classificarRocha"
        android:layout_width="@dimen/button_home_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_classificar_rocha"
        app:layout_constraintBottom_toTopOf="@+id/button_meusInsetos"
        app:layout_constraintEnd_toEndOf="@+id/button_classificarInseto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_classificarInseto"
        app:layout_constraintTop_toBottomOf="@+id/button_classificarInseto" />

    <Button
        android:id="@+id/button_classificarInseto"
        android:layout_width="@dimen/button_home_width"
        android:layout_height="wrap_content"
        android:text="@string/button_classificar_inseto"
        app:layout_constraintBottom_toTopOf="@+id/button_classificarRocha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_homeScreen"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_meusInsetos"
        android:layout_width="@dimen/button_home_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/button_meus_insetos"
        app:layout_constraintBottom_toTopOf="@+id/button_minhasRochas"
        app:layout_constraintEnd_toEndOf="@+id/button_classificarRocha"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_classificarRocha"
        app:layout_constraintTop_toBottomOf="@+id/button_classificarRocha" />

    <TextView
        android:id="@+id/textView_homeScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/textView_home_screen"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>